--- a/autoCompleteSearchInput.html
+++ b/autoCompleteSearchInput.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutoComplete search Input</title>
-    <link rel="stylesheet" href="./autoCompleteSearchInput.css" />
+    <link rel="stylesheet" href="./autoCompleteSearchInput.css" /><!-- link the css  -->
   </head>
   <body>
-    <h1>AutoComplete search Input</h1>
-    <form action="#" autocomplete="off">
-      <div id="autocomplete-wrapper" class="autocomplete-wrapper">
-        <input id="autocomplete-input" type="text" placeholder="Country" />
+    <h1>AutoComplete Search Input</h1>
+    <form action="#" autocomplete="off"> <!-- change default auto complete feature to make search autocomplete functionaltiy  -->
+      <div id="autocomplete-wrapper" class="autocomplete-wrapper"> <!-- match the child element width  -->
+        <input id="autocomplete-input" type="text" placeholder="Country"/><!-- using id to access the element -->
+        <!-- this is use to setup for rough to setup styling our search input element -->
         <!-- <ul class="autocomplete-list">
           <li><button>Afghanistan</button></li>
           <li><button>Finland</button></li>
@@ -20,6 +21,6 @@
       </div>
       <button class="btn-submit">Send</button>
     </form>
-    <script src="./autocompleteSearchInput.js"></script>
+    <script src="./autocompleteSearchInput.js"></script> <!-- link java script file -->
   </body>
 </html>
